nav and header finished

--- a/index.html
+++ b/index.html
@@ -38,27 +38,28 @@
                     <div class="search-bar">
                         <input type="text" placeholder="请输入查询商品" />
                         <div class="search-btn"><span class="iconfont iconfont-search">&#xe63c;</span></div>
-                        <div class="cart-btn"><span class="iconfont">&#xe63b;</span> 我的购物车</div>
+                        <div class="cart-btn"><span class="iconfont iconfont-cart">&#xe63b;</span> 我的购物车</div>
                     </div>
                     <ul class="recommend">
-                        <li><a href="#" target="_blank">物品</a></li>
-                        <li><a href="#" target="_blank">物品</a></li>
-                        <li><a href="#" target="_blank">物品</a></li>
-                        <li><a href="#" target="_blank">物品</a></li>
-                        <li><a href="#" target="_blank">物品</a></li>
-                        <li><a href="#" target="_blank">物品</a></li>
-                        <li><a href="#" target="_blank">物品</a></li>
-                        <li><a href="#" target="_blank">物品</a></li>
+                        <li><a href="#" target="_blank">二手手机</a></li>
+                        <li><a href="#" target="_blank">暖心配件</a></li>
+                        <li><a href="#" target="_blank">家电补贴</a></li>
+                        <li><a href="#" target="_blank">美妆达人</a></li>
+                        <li><a href="#" target="_blank">冬季特惠</a></li>
+                        <li><a href="#" target="_blank">秒杀清仓</a></li>
+                        <li><a href="#" target="_blank">低价转让</a></li>
+                        <li><a href="#" target="_blank">水果大促</a></li>
                     </ul>
-                    <ul>
-                        <li><a href="#" target="_blank">物品</a></li>
-                        <li><a href="#" target="_blank">物品</a></li>
-                        <li><a href="#" target="_blank">物品</a></li>
-                        <li><a href="#" target="_blank">物品</a></li>
-                        <li><a href="#" target="_blank">物品</a></li>
-                        <li><a href="#" target="_blank">物品</a></li>
-                        <li><a href="#" target="_blank">物品</a></li>
-                        <li><a href="#" target="_blank">物品</a></li>
+                    <ul class="recommend2">
+                        <li><a href="#" target="_blank">秒杀</a></li>
+                        <li><a href="#" target="_blank">优惠券</a></li>
+                        <li><a href="#" target="_blank">会员购</a></li>
+                        <li><a href="#" target="_blank">海外购买</a></li>
+                        <li><a href="#" target="_blank">品牌闪购</a></li>
+                        <li><a href="#" target="_blank">京东超市</a></li>
+                        <li><a href="#" target="_blank">惊喜不断</a></li>
+                        <li><a href="#" target="_blank">京东金融</a></li>
+                        <li><a href="#" target="_blank">京东京造</a></li>
                     </ul>
                 </div>
                 <div class="ad-box">
