--- a/index.html
+++ b/index.html
@@ -72,7 +72,156 @@
         </div>
         <div class="content">
             <div class="wrapper">
-                <div class="menu-box"></div>
+                <div class="menu-box">
+                    <ul>
+                        <li>
+                            <div class="main-menu">
+                                <a href="#" target="_blank">家用电器</a>
+                            </div>
+                            <div class="sub-menu">
+                                <div class="left-box">
+                                    <div class="menu-title">
+                                        <a class="item" href="#" target="_blank">家电馆 &gt;</a>
+                                        <a class="item" href="#" target="_blank">家电专卖店 &gt;</a>
+                                        <a class="item" href="#" target="_blank">家电服务 &gt;</a>
+                                        <a class="item" href="#" target="_blank">企业采购 &gt;</a>
+                                        <a class="item" href="#" target="_blank">商用电器 &gt;</a>
+                                        <a class="item" href="#" target="_blank">以旧换新 &gt;</a>
+                                    </div>
+                                    <dl>
+                                        <dt>
+                                            <a href="#" target="_blank">电视 &gt;</a>
+                                        </dt>
+                                        <dd>
+                                            <a href="#" target="_blank">超薄电视</a>
+                                            <a href="#" target="_blank">全面屏电视</a>
+                                            <a href="#" target="_blank">智能电视</a>
+                                            <a href="#" target="_blank">OLED电视</a>
+                                            <a href="#" target="_blank">智慧屏</a>
+                                            <a href="#" target="_blank">4K超清电视</a>
+                                            <a href="#" target="_blank">55英寸</a>
+                                            <a href="#" target="_blank">65英寸</a>
+                                            <a href="#" target="_blank">电视配件</a>
+                                        </dd>
+                                    </dl>
+                                    <dl>
+                                        <dt>
+                                            <a href="#" target="_blank">空调 &gt;</a>
+                                        </dt>
+                                        <dd>
+                                            <a href="#" target="_blank">空调挂机</a>
+                                            <a href="#" target="_blank">空调柜机</a>
+                                            <a href="#" target="_blank">中央空调</a>
+                                            <a href="#" target="_blank">变频空调</a>
+                                            <a href="#" target="_blank">一级能效</a>
+                                            <a href="#" target="_blank">移动空调</a>
+                                            <a href="#" target="_blank">以旧换新</a>
+                                        </dd>
+                                    </dl>
+                                    <dl>
+                                        <dt>
+                                            <a href="#" target="_blank">洗衣机 &gt;</a>
+                                        </dt>
+                                        <dd>
+                                            <a href="#" target="_blank">滚筒洗衣机</a>
+                                            <a href="#" target="_blank">洗烘一体机</a>
+                                            <a href="#" target="_blank">波轮洗衣机</a>
+                                            <a href="#" target="_blank">迷你洗衣机</a>
+                                            <a href="#" target="_blank">烘干机</a>
+                                            <a href="#" target="_blank">洗衣机配件</a>
+                                            <a href="#" target="_blank">洗衣机配件</a>
+                                            <a href="#" target="_blank">洗衣机配件</a>
+                                            <a href="#" target="_blank">洗衣机配件</a>
+                                            <a href="#" target="_blank">洗衣机配件</a>
+                                            <a href="#" target="_blank">洗衣机配件</a>
+                                            <a href="#" target="_blank">洗衣机配件</a>
+                                            <a href="#" target="_blank">洗衣机配件</a>
+                                            <a href="#" target="_blank">洗衣机配件</a>
+                                            <a href="#" target="_blank">洗衣机配件</a>
+                                            <a href="#" target="_blank">洗衣机配件</a>
+                                            <a href="#" target="_blank">洗衣机配件</a>
+                                        </dd>
+                                    </dl>
+                                    <dl>
+                                        <dt>
+                                            <a href="#" target="_blank">冰箱 &gt;</a>
+                                        </dt>
+                                        <dd>
+                                            <a href="#" target="_blank">多门</a>
+                                            <a href="#" target="_blank">对开门</a>
+                                            <a href="#" target="_blank">三门</a>
+                                            <a href="#" target="_blank">双门</a>
+                                            <a href="#" target="_blank">冷柜/冰吧</a>
+                                            <a href="#" target="_blank">酒柜</a>
+                                            <a href="#" target="_blank">冰箱配件</a>
+                                        </dd>
+                                    </dl>
+                                    <dl>
+                                        <dt>
+                                            <a href="#" target="_blank">厨卫大电 &gt;</a>
+                                        </dt>
+                                        <dd>
+                                            <a href="#" target="_blank">油烟机</a>
+                                            <a href="#" target="_blank">燃气灶</a>
+                                            <a href="#" target="_blank">烟灶套装</a>
+                                            <a href="#" target="_blank">集成灶</a>
+                                            <a href="#" target="_blank">消毒柜</a>
+                                            <a href="#" target="_blank">洗碗机</a>
+                                            <a href="#" target="_blank">热点水器</a>
+                                            <a href="#" target="_blank">燃气热水器</a>
+                                            <a href="#" target="_blank">空气能热水器</a>
+                                            <a href="#" target="_blank">太阳能热水器</a>
+                                            <a href="#" target="_blank">嵌入式厨电</a>
+                                            <a href="#" target="_blank">烟机灶具配件</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                            <a href="#" target="_blank">烟机灶具</a>
+                                        </dd>
+                                    </dl>
+                                </div>
+                                <div class="right-box">
+                                    <div class="pic-box">
+                                        <a href="#" target="_blank">
+                                            <img width="168" height="134" src="https://img13.360buyimg.com/vclist/s336x268_jfs/t1/118441/2/18306/3537/5f689459E86ae7104/e933330d5aba3f15.png.webp" alt="ad">
+                                        </a>
+                                    </div>
+                                    <div class="pic-box">
+                                        <a href="#" target="_blank">
+                                            <img width="168" height="134" src="https://img14.360buyimg.com/vclist/s336x268_jfs/t1/28834/20/1203/14780/5c106c45E801c0162/331a9c8fdb4a4e34.jpg.webp" alt="ad">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
                 <div class="slider-box"></div>
                 <div class="ad-box"></div>
                 <div class="info-box"></div>
