--- a/index.html
+++ b/index.html
@@ -2229,6 +2229,15 @@
                                 <img width="590px" height="470px" src="./img/5.jpg" alt="">
                             </li>
                         </ul>
+                        <div class="left-box">
+                            <span>&lt;</span>
+                        </div>
+                        <div class="right-box">
+                            <span>&gt;</span>
+                        </div>
+                        <div class="index-box">
+                            <ol></ol>
+                        </div>
                     </div>
 
 
