--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="header">
                 <div class="logo-box">
                     <a href="http://www.jd.com">
-                        <img src="https://dss0.bdstatic.com/-0U0bnSm1A5BphGlnYG/tam-ogel/96c2f5e3e09fac690a937f910ebb96fa_121_121.jpg" alt="logo">
+                        <img width="190" height="120" src="https://img1.360buyimg.com/da/jfs/t1/16134/5/11584/77878/5c90a4bdE5ae12937/38714fb6679b8daf.gif" alt="logo">
                     </a>
                 </div>
                 <div class="search-box">
@@ -62,7 +62,7 @@
                         <li><a href="#" target="_blank">京东京造</a></li>
                     </ul>
                 </div>
-                <div class="ad-box">
+                <div class="ad-box1">
                     <a href="http://jd.com" target="_blank">
                         <img width="121" height="121" src="http://img12.360buyimg.com/img/jfs/t1/67481/15/565/28110/5cec9234E71c47244/dc4cf353fd96922e.png.webp" alt="ad">
                     </a>
@@ -2214,19 +2214,19 @@
                     <div class="slider" id="slider">
                         <ul class="clearfix">
                             <li>
-                                <img width="590px" height="470px" src="./img/1.jpg" alt="">
+                                <img class="img-wh" src="./img/1.jpg" alt="">
                             </li>
                             <li>
-                                <img width="590px" height="470px" src="./img/2.jpg" alt="">
+                                <img class="img-wh" src="./img/2.jpg" alt="">
                             </li>
                             <li>
-                                <img width="590px" height="470px" src="./img/3.jpg" alt="">
+                                <img class="img-wh" src="./img/3.jpg" alt="">
                             </li>
                             <li>
-                                <img width="590px" height="470px" src="./img/4.jpg" alt="">
+                                <img class="img-wh" src="./img/4.jpg" alt="">
                             </li>
                             <li>
-                                <img width="590px" height="470px" src="./img/5.jpg" alt="">
+                                <img class="img-wh" src="./img/5.jpg" alt="">
                             </li>
                         </ul>
                         <div class="left-box">
@@ -2239,11 +2239,9 @@
                             <ol></ol>
                         </div>
                     </div>
-
-
                 </div>
 
-                <div class="ad-box">
+                <div class="ad-box2">
                     <div class="pic-box">
                         <a href="#" target="_blank">
                             <img width="100%" src="https://img20.360buyimg.com/seckillcms/s280x280_jfs/t1/117163/23/18887/143763/5f714dfbEc850519d/e71e7bee35c60098.jpg.webp" alt="">
